crates/smart-config/tests/ui/derives/deserializer_for_nested_config.stderr
error: cannot specify `with` for a `nest`ed / `flatten`ed configuration
  --> tests/ui/derives/deserializer_for_nested_config.rs:10:27
   |
10 |     #[config(nest, with = ())]
   |                           ^^
